--- a/src/client/app/dashboard/home/home.component.html
+++ b/src/client/app/dashboard/home/home.component.html
@@ -1,109 +1,46 @@
-<!--
-<div class="animate">
-    <div class="animate">
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="card">
-                    <div class="card-header"> --><!--card-info card-inverse--> <!--
-                        <h3 class="card-title">Carousel</h3>
-                    </div>
-                    <div class="card-block">
-                        <carousel interval="5000">
-                            <slide active="slide.active">
-                                <img width="100%" src="assets/images/slider0.jpg">
-                            </slide>
-                            <slide>
-                                <img width="100%" src="assets/images/slider1.jpg">
-                            </slide>
-                            <slide>
-                                <img width="100%" src="assets/images/slider2.jpg">
-                            </slide>
-                            <slide>
-                                <img width="100%" src="assets/images/slider3.jpg">
-                            </slide>
-                            <i class="fa fa-chevron-left left carousel-control"></i>
-                            <i class="fa fa-chevron-right right carousel-control"></i>
-                        </carousel>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="img-fluid" src="assets/images/cards.jpg" width="100%" alt="Image">
-                    <div class="card-block">
-                        <h4 class="card-title">Title</h4>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="Javascript:void(0);" class="btn btn-primary">Button</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-8">
-                <div class="card">
-                    <div class="card-header card-default">
-                        <h5 class="card-title">Text alignment
-                        </h5>
-                    </div>
-                    <div class="card-block">
-                        <div class="row">
-                            <div class="col-md-4 text-xs-left">
-                                <div class="card card-default card-block">
-                                    <blockquote class="card-blockquote">
-                                    <h4 class="text-default">Title</h4>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa et, suscipit non nihil voluptates, maxime ad dignissimos vitae.</p>
-                                        <a href="Javascript:void(0);" class="btn btn-primary">Go somewhere</a>
-                                    </blockquote>
-                                </div>
-                            </div>
+<h1 align="center">Orders</h1>
+<div class="table">
 
-                            <div class="col-md-4 text-xs-center">
-                                <div class="card card-default card-block">
-                                    <blockquote class="card-blockquote">
-                                    <h4 class="text-default">Title</h4>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa et, suscipit non nihil voluptates, maxime ad dignissimos vitae.</p>
-                                        <a href="Javascript:void(0);" class="btn btn-primary">Go somewhere</a>
-                                    </blockquote>
-                                </div>
-                            </div>
-
-                            <div class="col-md-4 text-xs-right">
-                                <div class="card card-default card-block ">
-                                    <blockquote class="card-blockquote">
-                                    <h4 class="text-default">Title</h4>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa et, suscipit non nihil voluptates, maxime ad dignissimos vitae.</p>
-                                        <a href="Javascript:void(0);" class="btn btn-primary">Go somewhere</a>
-                                    </blockquote>
-                                </div>
-                            </div>                              
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <table class="table">
+		
+        <thead>
+            <tr>
+                <th>Order Id</th>
+                <th>Customer Id</th>
+                <th>Date</th>
+                <th>Total</th>
+                <th>Status</th>
+                <th>Remarks</th>
+                <th>Delivery Time</th>
+                <th>Packaging</th>
+                <th>Location</th>
+            </tr>
+		
+        </thead>
+        <tbody>
+           <tr *ngFor='let order of orders'>
+            <td>{{order.orderID}}</td>
+            <td>{{order.customerID}}</td>
+            <td>{{order.orderDate}}</td>
+            <td>₱{{order.orderTotal}}</td>
+            <td>
+                <select #stat [(ngModel)]="order.orderStatus" (change)="onChange(stat,$event,order.orderID,order.customerID,order.orderDate,order.orderTotal,order.orderStatus,order.orderRemarks,order.orderTime,order.packaging,order.location)">
+                    <option  value="cancelled">cancelled</option>
+                    <option value="pending">pending</option>
+                    <option value="verified">verified</option>
+                    <option value="delivered">delivered</option>        
+                </select>
+            </td>
+            <td>{{order.orderRemarks}}</td>
+            <td>{{order.orderTime}}</td>
+            <td>{{order.packaging}}</td>
+            <td>{{order.location}}</td>
+            
+           
+          
+        </tr>
+            
+        
+        </tbody>
+    </table>
 </div>
--->
-
-<!-- app.component.html 
-<input type="file"
-       ngFileSelect
-       [options]="options"
-       (onUpload)="handleUpload($event)"
-       (beforeUpload)="beforeUpload($event)">
- -->
-<!-- drag & drop file example
-<style>
-  .file-over { border: dotted 3px red; } /* Default class applied to drop zones on over */
-</style> 
-<div ngFileDrop
-     [options]="options"
-     (onUpload)="handleUpload($event)"
-     [ngClass]="{'file-over': hasBaseDropZoneOver}"
-     (onFileOver)="fileOverBase($event)"
-     (beforeUpload)="beforeUpload($event)">
-</div>
- 
-<div>
-Response: {{ uploadFile | json }}
-</div>-->
