--- a/src/client/app/dashboard/itemstatistics/itemstatistics.component.html
+++ b/src/client/app/dashboard/itemstatistics/itemstatistics.component.html
@@ -1,13 +1,14 @@
-<h1 align="center">Top 20 Most Bought Items</h1>
-<div class="table">
-    <table class="table">
+<h1 align="center">Top 20 Most Bought Items(All Time)</h1>
+<div class="table well">
+    <table class="table table-scroll">
         <thead>
-        <th>Picture</th>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Price</th>
-        <th>Purchase Count</th>      
-
+            <tr>
+                <th>Picture</th>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Price</th>
+                <th>Purchase Count</th>      
+            </tr>
         </thead>
         <tbody>
             <tr *ngFor="let item of items.data">
@@ -15,8 +16,8 @@
                 <td><img src="{{item.picture}}" width="100" height="100"></td>
                 <td>{{item.itemID}}</td>
                 <td>{{item.itemName}}</td>
-                <td>₱{{item.itemPrice}}</td>
-                <td>{{item.purchaseCount}}</td>              
+                <td>{{item.itemPrice | currency:'PHP':true:'1.2-2'}}</td>
+                <td>{{item.purchaseCountAllTime}}</td>              
             </tr>
             
         
